Fix scss mistake with layout(s) in base.scss

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -3,5 +3,5 @@
 @import 'helpers/mixins';
 @import 'components/reset';
 @import 'components/typography';
-@import 'layouts/grid';
+@import 'layout/grid';
 @import 'pages/main';
